[gd_scene load_steps=37 format=2]

[ext_resource path="res://Sprites/animations/wood.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/resources/coal.png" type="Texture" id=3]
[ext_resource path="res://Sprites/resources/axe.png" type="Texture" id=4]
[ext_resource path="res://Styles/Master Theme.tres" type="Theme" id=5]
[ext_resource path="res://Prefabs/Scripts/LORED.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/misc/hold_false.png" type="Texture" id=9]
[ext_resource path="res://Styles/Labels/name.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scripts/lored/Progress Bar.gd" type="Script" id=11]
[ext_resource path="res://Styles/Labels/halt_text.tres" type="DynamicFont" id=12]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Styles/Labels/Num.tres" type="DynamicFont" id=14]
[ext_resource path="res://Sprites/animations/autobuyer.tres" type="SpriteFrames" id=15]
[ext_resource path="res://Scripts/lored/AnimatedSprite.gd" type="Script" id=16]
[ext_resource path="res://Scripts/lored/Fuel.gd" type="Script" id=17]
[ext_resource path="res://Scripts/lored/Status Indicator.gd" type="Script" id=18]
[ext_resource path="res://Styles/Labels/Flair.tres" type="DynamicFont" id=19]
[ext_resource path="res://Prefabs/template/Check Box.tscn" type="PackedScene" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.027451 )
border_width_left = 5
border_width_right = 5
border_color = Color( 1, 1, 1, 0.00392157 )
border_blend = true
corner_radius_top_left = 35
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
shadow_color = Color( 0.054902, 0.054902, 0.054902, 1 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.4 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.501961 )
draw_center = false
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0.270588, 0.270588, 0.270588, 1 )
corner_radius_top_left = 35
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
shadow_color = Color( 0.054902, 0.054902, 0.054902, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.0509804 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.0745098, 0.0745098, 0.0745098, 0.0392157 )
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0, 0, 0, 0.294118 )

[sub_resource type="DynamicFont" id=6]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -3
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.148438, 0.148438, 0.148438, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
border_color = Color( 0.117647, 0.117647, 0.117647, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_size = 3

[sub_resource type="DynamicFont" id=14]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 1 )

[node name="LORED" type="MarginContainer"]
anchor_right = 0.0125
margin_right = 351.2
margin_bottom = 122.0
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 354.0
margin_bottom = 112.0
custom_styles/panel = SubResource( 1 )

[node name="status" type="Panel" parent="bg"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = -10.0
margin_top = -10.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg2" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 354.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 78 )
custom_styles/panel = SubResource( 3 )

[node name="h" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 354.0
margin_bottom = 112.0
custom_constants/separation = 10

[node name="h" type="HBoxContainer" parent="h"]
margin_right = 258.0
margin_bottom = 102.0
custom_constants/separation = 10

[node name="animation" type="Panel" parent="h/h"]
margin_top = 17.0
margin_right = 68.0
margin_bottom = 85.0
rect_min_size = Vector2( 68, 68 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="h/h/animation"]
position = Vector2( 34, 34 )
scale = Vector2( 2, 2 )
frames = ExtResource( 1 )
animation = "ff"
frame = 20
playing = true
script = ExtResource( 16 )

[node name="lored" type="VBoxContainer" parent="h/h"]
margin_left = 78.0
margin_right = 258.0
margin_bottom = 102.0
rect_min_size = Vector2( 108, 0 )

[node name="h" type="HBoxContainer" parent="h/h/lored"]
margin_right = 180.0
margin_bottom = 36.0

[node name="icon" type="Panel" parent="h/h/lored/h"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="h/h/lored/h/icon"]
position = Vector2( 18, 18 )
texture = ExtResource( 4 )

[node name="v" type="VBoxContainer" parent="h/h/lored/h"]
margin_left = 40.0
margin_right = 180.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="name" type="Label" parent="h/h/lored/h/v"]
visible = false
modulate = Color( 0.806152, 0.806152, 0.806152, 1 )
margin_right = 80.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 10 )
text = "Copper Ore"

[node name="amount" type="Label" parent="h/h/lored/h/v"]
modulate = Color( 0.806152, 0.806152, 0.806152, 1 )
self_modulate = Color( 0.960784, 0.45098, 0, 1 )
margin_top = 2.0
margin_right = 140.0
margin_bottom = 19.0
rect_min_size = Vector2( 68, 0 )
custom_fonts/font = ExtResource( 14 )
text = "123e123"

[node name="net" type="Label" parent="h/h/lored/h/v"]
visible = false
modulate = Color( 0.801758, 0.801758, 0.801758, 1 )
margin_top = 17.0
margin_right = 68.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 6 )
text = "123e12/s"

[node name="item name" type="Label" parent="h/h/lored/h/v"]
modulate = Color( 0.801758, 0.801758, 0.801758, 1 )
margin_top = 19.0
margin_right = 140.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 19 )
text = "Wants to cast Hex"
autowrap = true

[node name="task" type="Panel" parent="h/h/lored"]
margin_top = 40.0
margin_right = 180.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/panel = SubResource( 7 )
script = ExtResource( 11 )

[node name="f" type="Panel" parent="h/h/lored/task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -63.0
rect_min_size = Vector2( 2, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flair" type="Panel" parent="h/h/lored/task/f"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
rect_min_size = Vector2( 2, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d" type="Label" parent="h/h/lored/task"]
modulate = Color( 0.806152, 0.806152, 0.806152, 1 )
self_modulate = Color( 0.960784, 0.45098, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
rect_min_size = Vector2( 68, 0 )
custom_fonts/font = SubResource( 10 )
text = "+16"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task text" type="Label" parent="h/h/lored/task"]
modulate = Color( 0.806152, 0.806152, 0.806152, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.00002
rect_min_size = Vector2( 68, 0 )
custom_fonts/font = SubResource( 11 )
custom_constants/line_spacing = -1
text = "You're super duper freaking cute"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fuel" type="HBoxContainer" parent="h/h/lored"]
margin_top = 84.0
margin_right = 180.0
margin_bottom = 102.0
mouse_filter = 0
script = ExtResource( 17 )

[node name="fuel_icon" type="Panel" parent="h/h/lored/fuel"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="h/h/lored/fuel/fuel_icon"]
position = Vector2( 9, 9 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="fuel" type="Panel" parent="h/h/lored/fuel"]
margin_left = 22.0
margin_top = 4.0
margin_right = 180.0
margin_bottom = 14.0
rect_min_size = Vector2( 40, 10 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/panel = SubResource( 12 )

[node name="f" type="Panel" parent="h/h/lored/fuel/fuel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -18.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flair" type="Panel" parent="h/h/lored/fuel/fuel/f"]
self_modulate = Color( 0.827451, 0.164706, 0.882353, 1 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="interactables" type="MarginContainer" parent="h"]
margin_left = 268.0
margin_top = 14.0
margin_right = 344.0
margin_bottom = 88.0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="bg" type="Panel" parent="h/interactables"]
margin_left = 5.0
margin_top = 5.0
margin_right = 71.0
margin_bottom = 69.0
custom_styles/panel = SubResource( 13 )

[node name="lored" type="VBoxContainer" parent="h/interactables"]
margin_left = 5.0
margin_top = 5.0
margin_right = 71.0
margin_bottom = 69.0
alignment = 1

[node name="h" type="HBoxContainer" parent="h/interactables/lored"]
margin_right = 66.0
margin_bottom = 28.0
rect_min_size = Vector2( 66, 0 )
alignment = 1

[node name="halt" type="Button" parent="h/interactables/lored/h"]
margin_right = 31.0
margin_bottom = 28.0
rect_min_size = Vector2( 31, 28 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 5 )
enabled_focus_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="h/interactables/lored/h/halt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.796875, 0.796875, 0.796875, 1 )
text = "=/="
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hold" type="Button" parent="h/interactables/lored/h"]
margin_left = 35.0
margin_right = 66.0
margin_bottom = 28.0
rect_min_size = Vector2( 31, 28 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
enabled_focus_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="h/interactables/lored/h/hold"]
texture = ExtResource( 9 )
centered = false

[node name="buy" type="Button" parent="h/interactables/lored"]
margin_top = 32.0
margin_right = 66.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 32 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 14 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autobuywheel" type="AnimatedSprite" parent="h/interactables/lored/buy"]
position = Vector2( 33, 16 )
scale = Vector2( 0.6, 0.6 )
frames = ExtResource( 15 )
frame = 5
playing = true

[node name="check" parent="h/interactables/lored/buy" instance=ExtResource( 20 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 3.0
margin_right = -29.0
margin_bottom = -2.0
focus_mode = 0
mouse_filter = 1
enabled_focus_mode = 0

[node name="quest" type="Panel" parent="h/interactables/lored"]
visible = false
margin_top = 68.0
margin_right = 68.0
margin_bottom = 73.0
rect_min_size = Vector2( 68, 5 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="f" type="Panel" parent="h/interactables/lored/quest"]
modulate = Color( 0.827451, 0.117647, 0.866667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -63.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="flair" type="Panel" parent="h/interactables/lored/quest/f"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lv" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 78.0
margin_bottom = 40.0
rect_min_size = Vector2( 68, 30 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="n" type="Node2D" parent="lv"]

[node name="texts" type="Node2D" parent="."]
[connection signal="mouse_entered" from="h/h/animation" to="." method="_on_animation_mouse_entered"]
[connection signal="mouse_exited" from="h/h/animation" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="h/h/lored/fuel" to="." method="_on_fuel_mouse_entered"]
[connection signal="mouse_exited" from="h/h/lored/fuel" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="h/interactables/lored/h/halt" to="." method="_on_halt_mouse_entered"]
[connection signal="mouse_exited" from="h/interactables/lored/h/halt" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="h/interactables/lored/h/halt" to="." method="_on_halt_pressed"]
[connection signal="mouse_entered" from="h/interactables/lored/h/hold" to="." method="_on_hold_mouse_entered"]
[connection signal="mouse_exited" from="h/interactables/lored/h/hold" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="h/interactables/lored/h/hold" to="." method="_on_hold_pressed"]
[connection signal="mouse_entered" from="h/interactables/lored/buy" to="." method="_on_buy_mouse_entered"]
[connection signal="mouse_exited" from="h/interactables/lored/buy" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="h/interactables/lored/buy" to="." method="_on_buy_pressed"]
